[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/newspaper.jpg" type="Texture" id=1]
[ext_resource path="res://styling/themes/newspaper.tres" type="Theme" id=2]
[ext_resource path="res://elements/News.gd" type="Script" id=3]
[ext_resource path="res://assets/close-150192_640.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "spin_arrive"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.130056, -1.00566, 0.130056, 1.00566 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.119414, -1.00061, 0.119414, 1.00061 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -360, -0.752888, 0.110962, 0.752888, -0.110962, 5, -0.172622, -29.1113, 0.172622, 29.1113 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "spin_depart"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="News" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -384.0
margin_bottom = -150.0
rect_rotation = 5.0
rect_pivot_offset = Vector2( 320, 225 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spin_arrive = SubResource( 1 )
anims/spin_depart = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 450.0
rect_min_size = Vector2( 640, 450 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Headline" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.5
margin_top = -35.0
margin_right = 137.5
margin_bottom = 5.0
bbcode_enabled = true
bbcode_text = "[center]Dukedom for Grabs[/center]"
text = "Dukedom for Grabs"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story" type="Label" parent="."]
margin_left = 182.5
margin_top = 235.0
margin_right = 457.5
margin_bottom = 355.0
text = "Palmer, first-born son of Larra arrived today to jockey for the dukedom. Calls his disinheritance, \"irrelevant\" and vows success"
autowrap = true

[node name="Score" type="VBoxContainer" parent="."]
margin_left = 182.5
margin_top = 360.0
margin_right = 457.5
margin_bottom = 400.0
rect_min_size = Vector2( 275, 0 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Row1" type="HBoxContainer" parent="Score"]
margin_right = 275.0
margin_bottom = 22.0
rect_min_size = Vector2( 275, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_cust" type="Label" parent="Score/Row1"]
margin_right = 78.0
margin_bottom = 22.0
text = "Customers"

[node name="cnt_cust" type="Label" parent="Score/Row1"]
margin_left = 82.0
margin_right = 92.0
margin_bottom = 22.0
text = "5"

[node name="spacer01" type="Label" parent="Score/Row1"]
margin_left = 96.0
margin_right = 122.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="lbl_served" type="Label" parent="Score/Row1"]
margin_left = 126.0
margin_right = 176.0
margin_bottom = 22.0
text = "Served"

[node name="cnt_served" type="Label" parent="Score/Row1"]
margin_left = 180.0
margin_right = 190.0
margin_bottom = 22.0
text = "5"

[node name="spacer02" type="Label" parent="Score/Row1"]
margin_left = 194.0
margin_right = 220.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="lbl_stars" type="Label" parent="Score/Row1"]
margin_left = 224.0
margin_right = 261.0
margin_bottom = 22.0
text = "Stars"

[node name="cnt_stars" type="Label" parent="Score/Row1"]
margin_left = 265.0
margin_right = 275.0
margin_bottom = 22.0
text = "5"

[node name="Row2" type="HBoxContainer" parent="Score"]
margin_top = 22.0
margin_right = 275.0
margin_bottom = 44.0
rect_min_size = Vector2( 275, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer01" type="Label" parent="Score/Row2"]
margin_right = 17.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="lbl_met" type="Label" parent="Score/Row2"]
margin_left = 21.0
margin_right = 107.0
margin_bottom = 22.0
text = "Heroes Met"

[node name="cnt_met" type="Label" parent="Score/Row2"]
margin_left = 111.0
margin_right = 121.0
margin_bottom = 22.0
text = "5"

[node name="spacer02" type="Label" parent="Score/Row2"]
margin_left = 125.0
margin_right = 143.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="lbl_foiled" type="Label" parent="Score/Row2"]
margin_left = 147.0
margin_right = 239.0
margin_bottom = 22.0
text = "Plans Foiled"

[node name="cnt_foiled" type="Label" parent="Score/Row2"]
margin_left = 243.0
margin_right = 253.0
margin_bottom = 22.0
text = "5"

[node name="spacer03" type="Label" parent="Score/Row2"]
margin_left = 257.0
margin_right = 275.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="ExitButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.717647 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
expand = true

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
